// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures: attr-equal-space-after.html 1`] = `
Array [
  Object {
    "column": 9,
    "fix": Object {
      "range": Array [
        0,
        106,
      ],
      "text": "<img src=\\"path/to\\">
<img src =\\"path/to\\">
<img
    src=\\"path/to\\">
<img
    src
    =\\"path/to\\">
",
    },
    "line": 1,
    "message": "Never insert space after equal sign of attribute",
    "nodeType": null,
    "ruleId": "markup/attr-equal-space-after",
    "severity": 1,
  },
  Object {
    "column": 9,
    "line": 2,
    "message": "Never insert space after equal sign of attribute",
    "nodeType": null,
    "ruleId": "markup/attr-equal-space-after",
    "severity": 1,
  },
  Object {
    "column": 8,
    "line": 4,
    "message": "Never insert space after equal sign of attribute",
    "nodeType": null,
    "ruleId": "markup/attr-equal-space-after",
    "severity": 1,
  },
  Object {
    "column": 8,
    "line": 7,
    "message": "Never insert space after equal sign of attribute",
    "nodeType": null,
    "ruleId": "markup/attr-equal-space-after",
    "severity": 1,
  },
]
`;

exports[`fixtures: attr-spacing.html 1`] = `
Array [
  Object {
    "column": 19,
    "fix": Object {
      "range": Array [
        0,
        34,
      ],
      "text": "<img src=\\"path/to\\" src=\\"path/to2\\">
",
    },
    "line": 1,
    "message": "Required space",
    "nodeType": null,
    "ruleId": "markup/attr-spacing",
    "severity": 1,
  },
]
`;

exports[`fixtures: combine.html 1`] = `
Array [
  Object {
    "column": 9,
    "fix": Object {
      "range": Array [
        0,
        141,
      ],
      "text": "<img src=\\"path/to\\">
<img src =\\"path/to\\">
<img
    src=\\"path/to\\">
<img
    src
    =\\"path/to\\">

<img src=\\"path/to\\" src=\\"path/to2\\">
",
    },
    "line": 1,
    "message": "Never insert space after equal sign of attribute",
    "nodeType": null,
    "ruleId": "markup/attr-equal-space-after",
    "severity": 1,
  },
  Object {
    "column": 9,
    "line": 2,
    "message": "Never insert space after equal sign of attribute",
    "nodeType": null,
    "ruleId": "markup/attr-equal-space-after",
    "severity": 1,
  },
  Object {
    "column": 8,
    "line": 4,
    "message": "Never insert space after equal sign of attribute",
    "nodeType": null,
    "ruleId": "markup/attr-equal-space-after",
    "severity": 1,
  },
  Object {
    "column": 8,
    "line": 7,
    "message": "Never insert space after equal sign of attribute",
    "nodeType": null,
    "ruleId": "markup/attr-equal-space-after",
    "severity": 1,
  },
  Object {
    "column": 19,
    "line": 11,
    "message": "Required space",
    "nodeType": null,
    "ruleId": "markup/attr-spacing",
    "severity": 1,
  },
]
`;

exports[`fixtures: doctype.html 1`] = `
Array [
  Object {
    "column": 1,
    "line": 1,
    "message": "Require doctype",
    "nodeType": null,
    "ruleId": "markup/doctype",
    "severity": 2,
  },
]
`;

exports[`fixtures: empty.html 1`] = `Array []`;
